[gd_scene load_steps=13 format=3 uid="uid://bbm7284ux0w7j"]

[ext_resource type="Script" path="res://components/fps_character/sword.gd" id="1_lkqp3"]
[ext_resource type="PackedScene" uid="uid://6ldfl5dpeix1" path="res://assets/weapons/pr_iron_sword.tscn" id="2_pemwx"]
[ext_resource type="PackedScene" uid="uid://sboyc7632ei8" path="res://components/hurt_box/hurt_box.tscn" id="3_sfal1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_beeqx"]
size = Vector3(0.0652191, 0.819342, 0.111157)

[sub_resource type="Animation" id="Animation_y7hr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0815418, 0.219178)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.157799, 0.00262845, 0)]
}

[sub_resource type="Animation" id="Animation_pj3ho"]
resource_name = "down_swing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.0260446, 0.0772793, -0.105249), Vector3(1.1372, -0.543749, -1.05032), Vector3(-0.683388, 0.0533948, -0.0765062), Vector3(-1.22915, 2.66114, -2.69199), Vector3(-0.917527, 2.64282, -2.29162), Vector3(-0.755153, 1.62011, -0.624334), Vector3(0.0260446, 0.0772793, -0.105249)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.197801, 0.00262845, -0.334661), Vector3(0.139608, 0.345648, -0.18298), Vector3(0.139608, 0.245912, -0.440194), Vector3(0.0547667, -0.182719, -0.597672), Vector3(-0.0263465, -0.182719, -0.453475), Vector3(0.141006, -0.120937, -0.245303), Vector3(0.197801, 0.00262845, -0.334661)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordMesh/IronSword2/HurtBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active"
}, {
"args": [false],
"method": &"set_active"
}]
}

[sub_resource type="Animation" id="Animation_hhfk5"]
resource_name = "on_equip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordMesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.347034, -0.159761, 0.0227372), Vector3(-0.22443, 0.00262845, -0.351738), Vector3(0.20132, 0.00262845, -0.359887)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordMesh:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.534842, 0.147522, 3.02203), Vector3(-0.593208, -0.480692, 2.8424), Vector3(0.0260446, 0.0772793, -0.105249)]
}

[sub_resource type="Animation" id="Animation_t5v4p"]
resource_name = "stab"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.0260446, 0.0772793, -0.105249), Vector3(-0.481892, 1.13549, -1.31878), Vector3(-0.102558, 1.31331, -1.48959), Vector3(-0.0843011, 1.56122, -1.62329), Vector3(-0.346088, 1.56065, -1.62065), Vector3(-0.0830833, 1.30652, -1.41636), Vector3(0.0260446, 0.0772793, -0.105249)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.197801, 0.00262845, -0.334661), Vector3(-0.0969715, 0.00262845, -0.220415), Vector3(-0.221148, 0.00262845, -0.0350294), Vector3(-0.0152151, -0.00350244, -0.521481), Vector3(-0.0152151, -0.00350244, -0.521481), Vector3(-0.221148, -0.107984, 0.0216018), Vector3(0.197801, 0.00262845, -0.334661)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordMesh/IronSword2/HurtBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active"
}, {
"args": [false],
"method": &"set_active"
}]
}

[sub_resource type="Animation" id="Animation_hgvfm"]
resource_name = "swing1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.0260446, 0.0772793, -0.105249), Vector3(0.55206, -0.258137, -0.686151), Vector3(-0.410934, 0.863298, -1.42164), Vector3(-0.0817456, 1.8466, -1.45103), Vector3(-0.229215, 2.36448, -1.28867), Vector3(-0.0637552, 1.64741, -0.28534), Vector3(0.0260446, 0.0772793, -0.105249)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.197801, 0.00262845, -0.334661), Vector3(0.276089, 0.0831846, -0.18298), Vector3(0.128016, -0.0876615, -0.59537), Vector3(-0.188828, 0.00262845, -0.638469), Vector3(-0.327871, 0.00262833, -0.431441), Vector3(-0.101307, 0.00262839, -0.255123), Vector3(0.197801, 0.00262845, -0.334661)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordMesh/IronSword2/HurtBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active"
}, {
"args": [false],
"method": &"set_active"
}]
}

[sub_resource type="Animation" id="Animation_20v3u"]
resource_name = "test_hold_swing"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.0260446, 0.0772793, -0.105249), Vector3(-1.03045, 1.58463, -1.65045), Vector3(-1.03045, 1.58463, -1.65045), Vector3(0.0260446, 0.0772793, -0.105249)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.197801, 0.00262845, -0.334661), Vector3(-0.0211989, -0.0308328, -0.597672), Vector3(-0.0211989, -0.0308328, -0.597672), Vector3(0.197801, 0.00262845, -0.334661)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordMesh/IronSword2/HurtBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 2.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active"
}, {
"args": [false],
"method": &"set_active"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_onj8e"]
_data = {
"RESET": SubResource("Animation_y7hr4"),
"down_swing": SubResource("Animation_pj3ho"),
"on_equip": SubResource("Animation_hhfk5"),
"stab": SubResource("Animation_t5v4p"),
"swing1": SubResource("Animation_hgvfm"),
"test_hold_swing": SubResource("Animation_20v3u")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_72pak"]
properties/0/path = NodePath("AnimationPlayer:current_animation")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("SwordMesh:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("SwordMesh:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Sword" type="Node3D"]
script = ExtResource("1_lkqp3")

[node name="SwordMesh" type="Node3D" parent="."]
transform = Transform3D(0.972834, -0.216705, 0.0814514, 0.217428, 0.976075, 0, -0.0795029, 0.0177098, 0.996676, -0.157799, 0.00262845, 0)

[node name="IronSword2" parent="SwordMesh" instance=ExtResource("2_pemwx")]
transform = Transform3D(0.0429093, -0.0838489, 0.995554, -0.00672534, 0.996425, 0.0842121, -0.999056, -0.0103089, 0.042192, 0, 0, 0)

[node name="HurtBox" parent="SwordMesh/IronSword2" instance=ExtResource("3_sfal1")]
transform = Transform3D(0.0429093, -0.00672535, -0.999056, -0.0838489, 0.996425, -0.0103088, 0.995555, 0.0842121, 0.042192, -0.00310507, 0.460043, 0.0388802)
damage = 25

[node name="CollisionShape3D" type="CollisionShape3D" parent="SwordMesh/IronSword2/HurtBox"]
transform = Transform3D(0.996548, -0.0830075, 0.0011996, 0.0829962, 0.996537, 0.00668213, -0.00174989, -0.00655949, 0.999976, -0.0287468, -0.0807154, -0.00292933)
shape = SubResource("BoxShape3D_beeqx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_onj8e")
}
autoplay = "on_equip"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_72pak")
